# SuiS3

./: README.md
contract/: Move.toml
contract/sources/: suis3.move
contract/tests/: suis3_tests.move
suis3_cli/: Cargo.toml
suis3_cli/src/: lib.rs  logger.rs  main.rs  operations.rs  utils.rs  walrus.rs
suis3_cli/src/command/: mod.rs
