[package]
name = "suis3"
edition = "2021"

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types"}
dirs = "5.0.1"
interactor = "0.1"
toml = "0.8.19"
serde = "1.0"
serde_derive = "1.0"
hyper = "1.4.1"
http = "1.1.0"
chrono = "0.4"
base64 = "0.22.1"
url = "2.1"
log = "0.4"
md5 = "0.7.0"
serde_json = "1.0"
regex = "1.5"
quick-xml = "0.36.1"
colored = "2.0.0"
clap = { version =  "4.4.18", features = ["derive"]}
hex = "0.4.2"
humansize = "2.0"
tokio = { version = "1.40.0", optional = true }
anyhow = "1.0"
futures = "0.3"
bcs = "=0.1.6"
serde_with = "3.9.0"

[features]
default = ["async"]
async = [
    "tokio"
]
